# batmon

./: .gitignore  BATMON.yml  README.md  batmon.spec  env.sample  make_exe.sh  pyproject.toml  report_batmon.md
backend/: main.py
backend/api/v1/endpoints/: batmon_routes.py  home_routes.py  system_routes.py
backend/core/: batmon_db.py  config.py
backend/domains/: batmon_schema.py  schemas.py  system_schema.py
backend/domains/page_contexts/: context_files.py  context_registry.py
backend/domains/services/: auto_esafe.py  base_service.py  fund_mail_service.py  kindscrap_service.py  system_info_collector.py
backend/utils/: dir_util.py  sys_util.py
code_examples/: dashboard.2.html  dashboard1.html  files1.html  files2.html  files3.html  files4.html  refresh1.html  sysinfo2.py
docs/: 설계.md  임시.md
frontend/public/js/: fetch-util.js  main.js  nav.js
frontend/views/: error.html  main.html
frontend/views/common/: base.html  loading.html  nav.html  nav_right.html
frontend/views/template/: main.html
frontend/views/template/files/: tree.html  view.html
