[project]
name = "batmon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "concurrent-log-handler>=0.9.28",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "psutil>=7.0.0",
    "pyinstaller>=6.15.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "uvicorn>=0.35.0",
]
